# docs/swagger.json
@@ -47,7 +47,43 @@
                 }
             }
         },
-        "/logs": {
+        "/metrics": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "\u003ch3\u003egets metrics\u003c/h3\u003e",
+                "tags": [
+                    "Monitor"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "406": {
+                        "description": "Response body {message: error}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/logs": {
             "get": {
                 "security": [
                     {
@@ -99,7 +135,7 @@
                 }
             }
         },
-        "/logs-backup": {
+        "/v1/logs-backup": {
             "get": {
                 "security": [
                     {
@@ -135,44 +171,8 @@
                 }
             }
         },
-        "/metrics": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "\u003ch3\u003egets metrics\u003c/h3\u003e",
-                "tags": [
-                    "Monitor"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success response",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "406": {
-                        "description": "Response body {message: error}",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/subscribers/{name}": {
-            "put": {
+        "/v1/subscribers/{name}": {
+            "patch": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -225,7 +225,7 @@
                 }
             }
         },
-        "/topics": {
+        "/v1/topics": {
             "get": {
                 "security": [
                     {
@@ -301,7 +301,7 @@
                 }
             }
         },
-        "/topics/{name}": {
+        "/v1/topics/{name}": {
             "delete": {
                 "security": [
                     {
